# h264_VAA

./: .gitignore  blowfish.cpp
pcare/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  configure.scan  make.sh  test.c
pcare/autom4te.cache/: output.1  requests  traces.0  traces.1
pcare/src/: Makefile  Makefile.am  Makefile.in
pcare/src/audio/: Makefile  Makefile.am  Makefile.in  audio.c  buffer.h  mp3-decoder.c  playback.c  receive.c  record.c
pcare/src/audio/.deps/: adpcm.Po  audio.Po  mp3-decoder.Po  playback.Po  receive.Po  record.Po
pcare/src/control/: Makefile  Makefile.am  Makefile.in  led_control.c  motor.c  motor_driver.c  motor_driver.h  t_rh.c
pcare/src/control/.deps/: motor.Po  motor_driver.Po  t_rh.Po
pcare/src/core/: Makefile  Makefile.am  Makefile.in  main.c  pcare  rw.c  utils.c
pcare/src/core/.deps/: main.Po  rw.Po  utils.Po
pcare/src/include/: audio.h  camera.h  led_control.h  motor.h  network.h  protocol.h  rw.h  t_rh.h  types.h  utils.h
pcare/src/leds/: Makefile.am  leds.c
pcare/src/lib/: libmad.so.0.2.1
pcare/src/network/: Makefile  Makefile.am  Makefile.in  int_to_array.c  int_to_array.h  network.c  prase_pkt.c  prase_pkt.h  wifi_debug.h
pcare/src/network/.deps/: int_to_array.Po  network.Po  (+1 more)
pcare/src/tem_rh/: jerry.sh  t_rh  t_rh.c  t_rh.h
pcare/src/video/: Makefile  Makefile.am  Makefile.in  SONiX_UVC_TestAP.c  camera.c  huffman.h  sonix_xu_ctrls.c  sonix_xu_ctrls.h  v4l2.c  v4l2.h  v4l2uvc.c  v4l2uvc.h  yuv2jpg.c  yuv2jpg.h
(+763 files in other folders)
