#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([src/core/main.c], [1.0], [chenguangming@wxseuic.com])
AC_CONFIG_SRCDIR([src/audio/audio.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(wificar,1.0)

# Checks for programs.
AC_PROG_CC

#. Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create])
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/file.h sys/ioctl.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_MMAP
AC_CHECK_FUNCS([memset select strerror])

AC_OUTPUT([Makefile
                 src/Makefile
                 src/audio/Makefile
                 src/control/Makefile
                 src/core/Makefile
                 src/network/Makefile
                 src/video/Makefile])
